# seido

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: test.yml
boot/: Cargo.toml
boot/src/: main.rs
src/: font_rendering.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs  video.rs
tests/: basic_boot.rs  stack_overflow.rs
