[package]
name = "seido"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "boot"
]

[dependencies]
bootloader = "0.10.12"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.1"
font8x8 = { version = "0.3.1", features = ["unicode"], default-features = false }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootloader]
map-physical-memory =  true
map-framebuffer = true
framebuffer-address = 0xb8000